<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GGInventory</string>
    <string name="action_settings">Settings</string>

    <string name="reminder">Scan an item</string>
    <string name="plantname">Plant name:</string>
    <string name="qty">Quantity</string>
    <string name="type">Type</string>
    <string name="cost">Cost</string>
    <string name="details">Details</string>
    <string name="description">Description</string>
    <string name="titleText">Growing Grounds</string>
    <string name="inventory_button">Inventory</string>
    <string name="sales_button">Sales</string>
    <string name="dump_database">Dump Database</string>
    <string name="sync_to_computer">Sync To Computer</string>
    <string name="sync_from_computer">Sync From Computer</string>
    <string name="scan_item">Scan Item</string>
    <string name="new_record">New Record</string>
    <string name="retail">Retail</string>
    <string name="landscape">Landscape</string>
    <string name="notes">Notes</string>
    <string name="create_new_rec">Create a new record</string>
    <string name="sales_help">Enter Plant Name</string>
    <string name="price">Price</string>
    <string name="pictureSuccess">The picture was taken Successfully</string>
    <string name="pictureFail">Error taking or saving the picture</string>
    
</resources>
