<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Inventory"
        android:textSize="70dp"
        android:textColor="#EDBD01"
        android:id="@+id/inventoryTitle"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <Button
            style="@style/ButtonText"
            android:id="@+id/scan_item_button"
            android:layout_width="627dp"
            android:layout_height="436dp"
            android:background="@drawable/green_button"
            android:text="@string/scan_item"
            android:textColor="#000000"
            android:textSize="50dp" />

        <Button
            style="@style/ButtonText"
            android:id="@+id/dump_database_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/dump_database"
            android:textColor="#000000"
            android:textSize="50dp"
            android:background="@drawable/blue_button" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="1291dp"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:layout_marginLeft="10dp">

    </LinearLayout>

    <Button
        style="@style/SmallButtonText"
        android:id="@+id/new_record_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/purple_button"
        android:text="@string/new_record"
        android:textColor="#000000"
        android:textSize="30dp" />

</LinearLayout>