<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/create_new_rec"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:text="@string/qty"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_below="@+id/textView3"
        android:text="@string/type"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_below="@+id/textView4"
        android:text="@string/notes"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView5"
        android:layout_below="@+id/textView5"
        android:text="@string/details"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:text="Name:"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="30sp" />

    <Spinner
        android:id="@+id/spinner4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView1"
        android:layout_below="@+id/spinner3"
        android:layout_toRightOf="@+id/textView2"
        android:entries="@array/temp_fill" />

    <Spinner
        android:id="@+id/spinner3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView6"
        android:layout_alignLeft="@+id/spinner4"
        android:layout_alignRight="@+id/textView1"
        android:layout_below="@+id/spinner2"
        android:entries="@array/temp_fill" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView5"
        android:layout_alignLeft="@+id/spinner3"
        android:layout_alignRight="@+id/textView1"
        android:layout_below="@+id/Spinner01"
        android:entries="@array/temp_fill" />

    <Spinner
        android:id="@+id/Spinner01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView4"
        android:layout_alignLeft="@+id/spinner2"
        android:layout_alignRight="@+id/textView1"
        android:layout_alignTop="@+id/textView3"
        android:entries="@array/temp_fill" />

    <AutoCompleteTextView
        android:id="@+id/autoCompleteTextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignLeft="@+id/Spinner01"
        android:layout_alignParentRight="true"
        android:ems="10" >

        <requestFocus />
    </AutoCompleteTextView>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/spinner4"
        android:layout_alignRight="@+id/autoCompleteTextView1"
        android:layout_below="@+id/autoCompleteTextView1"
        android:layout_toRightOf="@+id/spinner4"
        android:src="@drawable/ic_launcher" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView6"
        android:layout_alignRight="@+id/imageView1"
        android:layout_below="@+id/spinner4"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/QRButton"
	        android:layout_width="0dp"
	        android:layout_height="fill_parent"
	        android:layout_margin="1dp"
	        android:layout_weight="1"
            android:background="@drawable/green_button"
            android:text="Print QR Code" />

        <Button
            android:id="@+id/addRecordButton"
	        android:layout_width="0dp"
	        android:layout_height="fill_parent"
	        android:layout_margin="1dp"
	        android:layout_weight="1"
            android:background="@drawable/red_button"
            android:text="Add Record" />
        
        <Button
            android:id="@+id/takePictureButton"
	        android:layout_width="0dp"
	        android:layout_height="fill_parent"
	        android:layout_margin="1dp"
	        android:layout_weight="1"
            android:background="@drawable/blue_button"
            android:text="Take Picture" />

    </LinearLayout>

</RelativeLayout>